Fix search list bottom item overlap

--- a/src/components/SearchList/SearchList.scss
+++ b/src/components/SearchList/SearchList.scss
@@ -3,8 +3,6 @@
 .search-list {
   overflow-y: auto;
   height: 100%;
-  display: flex;
-  flex: 1 auto;
   .text-list {
     .list-item {
       padding: 0.1em 0.5em;
